[package]
edition = "2021"
name = "fsavio_boleto-utils"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi6"] }
napi-derive = "2.12.2"

boleto-utils = "0.1.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
